# EntrevistAI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
spec/: 001_setup-mini-chat-preparation.md  002_Captura_Audio_Spec_Detalhada.md  003_Gemini_Live_Spec_Detalhada.md  004_Detecao_Pausa.md  005_Clean-archictur.md  006_ajustes_final.md  EntrevistAI_Plano.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  lib.rs  main.rs
src/lib/: types.ts
src/lib/components/: AudioStatus.svelte  FileUploader.svelte  InterviewInterface.svelte  MainWindow.svelte  MenuBar.svelte  PreparationWindow.svelte  ResponsePanel.svelte  TranscriptionPanel.svelte
src/lib/services/: appSettings.ts  audioService.ts  contextStore.ts  fileExtractor.ts  geminiLiveService.ts  geminiService.ts  responseService.ts
src/lib/stores/: responseStore.ts  transcriptionStore.ts
src/lib/types/: mammoth.d.ts
