[package]
name = "entrevistai"
version = "0.1.0"
description = "EntrevistAI desktop app"
authors = ["EntrevistAI"]
edition = "2021"

[lib]
name = "entrevistai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
once_cell = "1"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5.4", features = ["macos_13_0"] }
